# docviewer-standalone-prototype

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: run-addon.yml  update-config.yml
assets/: Install.command  Makefile  README.md  Run.command  env.json  env.sample  index.html  package-lock.json  package.json  svelte.config.js  vite.config.js
assets/src/: App.svelte  Index.svelte  main.js
fetch/: __init__.py
